# advent-of-code

./: .gitignore  README.md
2017/: .gitignore
2017/day-01/: main2_bytes_index.rs  main_bytes_iter.rs  main_char.rs
2017/day-02/: main2.rs
2017/day-04/: main.rs  main2.rs
2017/day-05/: main.rs  main2.rs
2017/day-06/: main.rs
2017/day-07/: main.rs  main2.rs
2017/day-10/: main2.rs
2017/day-12/: main2.rs
2017/day-17/: main.rs
2017/day-22/: main2.rs
2018/: .gitignore
2018/day-01/: Cargo.toml
2018/day-02/: Cargo.toml
2018/day-03/: Cargo.toml  big_input.txt
2018/day-04/: Cargo.toml
2018/day-05/: Cargo.toml
2018/day-06/: Cargo.toml
2018/day-07/: Cargo.toml
2018/day-08/: Cargo.toml
2018/day-09/: Cargo.toml
2018/day-10/: Cargo.toml
2018/day-11/: Cargo.toml
2018/day-14/: Cargo.toml
2018/day-16/: Cargo.toml
2019/: .gitignore
2020/: .gitignore  Cargo.toml  day04.hs  setup_day
2020/src/: grid.rs  (+4 more)
2021/: Cargo.toml  day24.sshash  setup_day
2021/src/: coord.rs  grid2d.rs  lib.rs  test.rs
2022/: Cargo.toml  README.md  advent-of-code-2022.sublime-project  setup_day
2022/input/: day22_blank.txt  day22_test2.txt
2022/notes/: day17_test_input_200_iterations.txt  day22_test2_debug.txt
2022/src/: coord.rs  lib.rs  test.rs
2022/src/coord/: point.rs
2023/: .gitignore  README.md  advent-of-code-2023.sublime-project  setup_day  setup_day_haskell  setup_day_rust
2024/: .gitignore  Cargo.toml  README.md  advent-of-code-2024.sublime-project  setup_day  setup_day_rust
2024/.helix/: config.toml
2024/input/: day07.txt  day09.txt  day10.txt  day25.txt
2024/notes/: day13.md  day17.md  day17.py  day17_reverse.py  day17_single.py  day24.md
2024/src/: grid2d.rs  lib.rs  point.rs  test.rs
2025/: .gitignore  README.md  setup_day  setup_day_haskell
day-01/: main_bytes_index.rs
day-02/: main.rs
day-03/: main.rs
day-06/: main2.rs
day-07/: main2.rs
day-10/: main.rs
day-11/: main.rs  main2.rs
day-12/: main.rs
day-15/: main.rs  main2.rs
day-17/: main2.rs
day-19/: main2.rs
day-21/: main.rs
day-22/: main.rs
(+136 files in other folders)
