[package]
name = "aoc2021"
version = "0.1.0"
authors = ["FichteFoll <fichtefoll2@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
custom_error = "1.9"
either = "1.6.1"
itertools = "0.10.1"
paste = "1.0"
