[package]
name = "aoc2021"
version = "0.1.0"
authors = ["FichteFoll <fichtefoll2@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# auto_ops = "^0.3.0"
# bimap = "^0.6.1"
# either = "^1.6.1"
itertools = "^0.10.1"
lazy_static = "^1.4.0"
multimap = { version = "^0.8.3", default-features = false }
paste = "^1.0.6"
thiserror = "^1.0.30"
