[package]
name = "aoc2022"
version = "0.1.0"
authors = ["FichteFoll <fichtefoll2@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = { version = "^1.0.7", optional = true }
itertools = "^0.10.5"
lazy_static = "^1.4.0"
paste = "^1.0.9"
thiserror = "^1.0.37"

[dev-dependencies]
test-case = "^2.2.2"

[features]
default = ["fnv"]
